# language_utils

./: README.md  dune  dune-project
lib/: dune
metalang/: _lit.ml  _raw_term.ml  _rty.ml  convention.ml  dune  eq.ml  mkcompare.ml  mkequal.ml  mkfv.ml  mkfvid.ml  mkmap.ml  mksubst.ml  mksubstinstance.ml  msyntax.ml  mtyped.ml  mutils.ml  test.ml  test2.ml
normal5ty/: ast.ml  connective.ml  dune  frontend.ml  normalty.ml  notatet.ml  nt.ml  ntopt.ml  smtty.ml  t.ml  typed.ml
ocaml5_parser/: dune
ocaml5_parser/_build/: .copy-db  .db  .digest-db  log
ocaml5_parser/_build/default/: annot.mli  ast_helper.ml  ast_iterator.ml  ast_iterator.mli  ast_mapper.ml  attr_helper.ml  attr_helper.mli  build_path_prefix_map.ml  builtin_attributes.ml  camlinternalMenhirLib.ml  camlinternalMenhirLib.mli  ccomp.mli  clflags.ml  cmi_format.ml  cmi_format.mli  cmt2annot.ml  config.ml  config.mli  datarepr.ml  datarepr.mli  depend.mli  diffing.ml  diffing.mli  docstrings.mli  errortrace.mli  frontend.ml  frontend.mli  ident.ml  ident.mli  identifiable.ml  includeclass.ml  includecore.mli  includemod.ml  includemod.mli  includemod_errorprinter.ml  includemod_errorprinter.mli  int_replace_polymorphic_compare.mli  lazy_backtrack.mli  lexer.mli  load_path.ml  (+48 more)
ocaml5_parser/_build/default/.dune/: configurator  configurator.v2
ocaml5_parser/_build/default/.merlin-conf/: lib-ocaml5_parser
ocaml5_parser/_build/default/.ocaml5_parser.objs/: ocaml5_parser__Annot.intf.d  ocaml5_parser__Arg_helper.impl.d  ocaml5_parser__Arg_helper.intf.d  ocaml5_parser__Ast_helper.impl.all-deps  ocaml5_parser__Ast_helper.impl.d  ocaml5_parser__Ast_helper.intf.all-deps  ocaml5_parser__Ast_helper.intf.d  ocaml5_parser__Ast_invariants.impl.all-deps  ocaml5_parser__Ast_invariants.impl.d  ocaml5_parser__Ast_invariants.intf.d  ocaml5_parser__Ast_iterator.impl.d  ocaml5_parser__Ast_iterator.intf.d  ocaml5_parser__Ast_mapper.impl.all-deps  ocaml5_parser__Ast_mapper.impl.d  ocaml5_parser__Ast_mapper.intf.d  ocaml5_parser__Asttypes.intf.d  ocaml5_parser__Attr_helper.impl.d  ocaml5_parser__Attr_helper.intf.d  ocaml5_parser__Binutils.impl.all-deps  ocaml5_parser__Binutils.impl.d  ocaml5_parser__Binutils.intf.d  ocaml5_parser__Btype.impl.all-deps  ocaml5_parser__Btype.impl.d  ocaml5_parser__Btype.intf.d  ocaml5_parser__Build_path_prefix_map.impl.d  ocaml5_parser__Build_path_prefix_map.intf.d  ocaml5_parser__Builtin_attributes.impl.all-deps  ocaml5_parser__Builtin_attributes.impl.d  ocaml5_parser__Builtin_attributes.intf.d  ocaml5_parser__CamlinternalMenhirLib.impl.d  ocaml5_parser__CamlinternalMenhirLib.intf.d  ocaml5_parser__Ccomp.impl.all-deps  ocaml5_parser__Ccomp.impl.d  ocaml5_parser__Ccomp.intf.d  ocaml5_parser__Clflags.impl.all-deps  ocaml5_parser__Clflags.impl.d  ocaml5_parser__Clflags.intf.all-deps  ocaml5_parser__Clflags.intf.d  ocaml5_parser__Cmi_format.impl.all-deps  ocaml5_parser__Cmi_format.impl.d  (+235 more)
ocaml5_parser/_build/default/.ocaml5_parser.objs/byte/: ocaml5_parser.cmi  ocaml5_parser.cmo  ocaml5_parser__Arg_helper.cmo  ocaml5_parser__Arg_helper.cmt  ocaml5_parser__Arg_helper.cmti  ocaml5_parser__Ast_helper.cmo  ocaml5_parser__Ast_helper.cmt  ocaml5_parser__Ast_helper.cmti  ocaml5_parser__Ast_invariants.cmi  ocaml5_parser__Ast_invariants.cmo  ocaml5_parser__Ast_invariants.cmt  ocaml5_parser__Ast_invariants.cmti  ocaml5_parser__Ast_iterator.cmo  ocaml5_parser__Ast_iterator.cmt  ocaml5_parser__Ast_iterator.cmti  ocaml5_parser__Ast_mapper.cmo  ocaml5_parser__Ast_mapper.cmt  ocaml5_parser__Asttypes.cmi  ocaml5_parser__Attr_helper.cmo  ocaml5_parser__Attr_helper.cmt  ocaml5_parser__Binutils.cmo  ocaml5_parser__Btype.cmi  ocaml5_parser__Btype.cmo  ocaml5_parser__Build_path_prefix_map.cmi  ocaml5_parser__Build_path_prefix_map.cmo  ocaml5_parser__Build_path_prefix_map.cmti  ocaml5_parser__Builtin_attributes.cmi  ocaml5_parser__Builtin_attributes.cmo  ocaml5_parser__Builtin_attributes.cmti  ocaml5_parser__CamlinternalMenhirLib.cmi  (+188 more)
ocaml5_parser/_build/default/parsing/: parser.ml
ocaml5_parser/_build/default/stdlib/: zstring.ml  zsys.ml
ocaml5_parser/_build/default/typing/: ctype.ml  path.ml  printtyp.ml  rec_check.ml
ocaml5_parser/_build/default/utils/: binutils.ml  misc.ml  profile.ml  warnings.mli
ocaml5_parser/boot/: ocamlrun
ocaml5_parser/driver/: mutils.ml
ocaml5_parser/stdlib/: zint.ml
ocaml5_parser/typing/: predef.ml
ocaml5_parser/utils/: ccomp.ml  config.ml  config_boot.ml  domainstate.ml  domainstate.mli  warnings.ml
(+336 files in other folders)
