(library
 (name metalang)
 (public_name language_utils.metalang)
 (wrapped false)
 (modules_without_implementation)
 (libraries utils core ocaml5_parser)
 (modules
   convention
   mtyped
   mutils
   msyntax
   mkfv
   mksubst
   test
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert))
 (inline_tests)
)
