(library
 (name normal5ty)
 (wrapped false)
 (modules_without_implementation)
 (libraries utils core ocaml5_parser)
 (modules
   connective
   smtty
   t
   nt
   ntopt
   typed
   frontend
   normalty
 )
 (preprocess (pps ppx_optcomp ppx_compare ppx_sexp_conv ppx_inline_test ppx_assert))
 (inline_tests)
)
