;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(env
 (dev     (flags (:standard -w +a-4-9-40-41-42-44-45-48-66-67-70)))
 (release (flags (:standard -w +a-4-9-40-41-42-44-45-48-66-67-70))))

;; Too annoying to get to work. Use (copy_files# ...) instead
; (include_subdirs unqualified)
; (ignored_subdirs (lex yacc testsuite ocamldoc ocamltest toplevel otherlibs))

(copy_files# utils/*.ml{,i})
(copy_files# parsing/*.ml{,i})
(copy_files# typing/*.ml{,i})
(copy_files# driver/*.ml{,i})
(copy_files# file_formats/*.ml{,i})
(copy_files# stdlib/*.ml{,i})

(library
 (name ocaml5_parser)
 (flags (:standard -principal))
 (modules_without_implementation
   annot asttypes outcometree parsetree)
 (modules
   ;; STDLIB
   zint zstring zsys
   ;; UTILS
   config build_path_prefix_map misc identifiable numbers arg_helper clflags
   profile terminfo ccomp warnings consistbl strongly_connected_components
   targetint load_path int_replace_polymorphic_compare binutils local_store
   lazy_backtrack diffing diffing_with_keys

   ;; PARSING
   location longident docstrings syntaxerr ast_helper camlinternalMenhirLib
   parser lexer parse printast pprintast ast_mapper ast_iterator attr_helper
   builtin_attributes ast_invariants depend
   ; manual update: mli only files
   asttypes parsetree

   ;; TYPING
   ident path primitive shape types btype oprint subst predef datarepr
   cmi_format persistent_env env type_immediacy errortrace
   typedtree printtyped ctype printtyp includeclass mtype envaux includecore
   tast_iterator tast_mapper signature_group cmt_format untypeast
   includemod includemod_errorprinter
   typetexp patterns printpat parmatch stypes typedecl
   ;; typeopt
   rec_check
   typecore
   typeclass typemod typedecl_variance typedecl_properties typedecl_immediacy
   typedecl_unboxed typedecl_separability cmt2annot
   ; manual update: mli only files
   annot outcometree

   ;; DRIVER
   pparse frontend
 ))
